# music_snippets_generator

./: .gitignore  .pycamouflage_whitelist  README.md  cards.csv  cards_flats.csv  interval_generator.bash  interval_generator.py  pyproject.toml  setup.cfg
src/interval_generator/: generate_anki_cards.py  interval_generator.py  music_theory.py  note.py
src/music_snippets_generator/: cli.py  music_snippets_generator.py  music_theory.py  music_to_pdf.py  utils.py
tests/: test_cli.py  test_generate_anki_cards.py  test_interval_generator.py  test_music_snippets_generator.py  test_music_theory.py  test_music_to_pdf.py  test_utils.py
