[tool.poetry]
name = "interval_generator"
version = "0.1.0"
description = "Generate images of musical intervals for importing to anki."
authors = ["Nicolas Schmitt <info@nicolaswebdev.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tdqm = "^0.0.1"
taskipy = "^1.9.0"
click = "^8.0.3"

[tool.poetry.scripts]
start = "src.interval_generator.generate_anki_cards:main"

[tool.taskipy.tasks]
test = "pytest"
watch = "ptw"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
