# Things are moving those days, to totally remove the need of a setup.py and a setup.cfg, to manage everything through the pyproject.toml instead.
# See https://github.com/python-poetry/poetry/issues/34 that was merged in Poetry 8 days ago, but there is no release yet.
[options.entry_points]
console_scripts =
    interval-generator = src.interval_generator.generate_anki_cards:main
