# Things are moving those days, to totally remove the need of a setup.py and a setup.cfg, to manage everything through the pyproject.toml instead.
# See https://github.com/python-poetry/poetry/issues/34 that was merged in Poetry 8 days ago, but there is no release yet.
[options.entry_points]
console_scripts =
    music-snippets-generator = src.music_snippets_generator.music_snippets_generator:main
